--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@next/font": "13.1.1",
     "eslint": "8.30.0",
     "eslint-config-next": "13.1.1",
+    "framer-motion": "^8.1.1",
     "graphql": "^16.6.0",
     "next": "13.1.1",
     "react": "18.2.0",
